[package]
name = "web_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio={ version = "1.38.0", features = ["full"]}
#Axum
axum ="0.7.5"
tower-http ={ version = "0.5.2", features = ["fs"]}
tower-cookies ="0.10.0"

#Serde / json
serde={version = "1.0.203", features = ["derive"]}
serde_json ="1.0.118"

#Others
lazy-regex="3.1.0"
async-trait="0.1.80"

[dev-dependencies]
anyhow = "1.0.86"
httpc-test = "0.1.9"
